--- a/index.html
+++ b/index.html
@@ -1,51 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"/>
-    <script src="https://kit.fontawesome.com/699c42e099.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <div id="navbar">
-        <img src="https://csite.nicepage.com/Images/logo-w.png" alt="logo"/>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/699c42e099.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div id="parent">
+      <div id="navbar">
+        <img src="https://csite.nicepage.com/Images/logo-w.png" alt="logo" />
         <div id="device">
-            <img src="https://csite.nicepage.com/Images/Site/responsive-desktop.png" alt="desktop"/> 
-            <img src="https://csite.nicepage.com/Images/Site/responsive-laptop.png" alt="laptop"/>
-            <img src="https://csite.nicepage.com/Images/Site/responsive-tablet.png" alt="tablet"/>
-            <img src="https://csite.nicepage.com/Images/Site/responsive-phone-horizontal.png" alt="phone"/>
-            <img src="https://csite.nicepage.com/Images/Site/responsive-phone.png" alt="phone"/>
+          <div id="img1" style="background-color: #c9e4f9">
+            <img
+              src="https://csite.nicepage.com/Images/Site/responsive-desktop.png"
+              alt="desktop"
+            />
+          </div>
+          <div id="img1">
+            <img
+              src="https://csite.nicepage.com/Images/Site/responsive-laptop.png"
+              alt="laptop"
+            />
+          </div>
+          <div id="img1">
+            <img
+              src="https://csite.nicepage.com/Images/Site/responsive-tablet.png"
+              alt="tablet"
+            />
+          </div>
+          <div id="img1">
+            <img
+              src="https://csite.nicepage.com/Images/Site/responsive-phone-horizontal.png"
+              alt="phone"
+            />
+          </div>
+          <div id="img1">
+            <img
+              src="https://csite.nicepage.com/Images/Site/responsive-phone.png"
+              alt="phone"
+            />
+          </div>
         </div>
-        <img class="close" src="https://csite.nicepage.com/Images/Site/icon-close.png" alt="logo"/>
-    </div>
-    <div id="nav">
-       <img src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/d03cc6e5-2eb6-4776-9a93-7e74e581851e_150.png"/>
-       <div id="applogo">
-        <i class="fa-solid fa-bars"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-square-twitter"></i>
-        <i class="fa-brands fa-square-instagram"></i>
-       </div>
-    </div>
-    <div id="cookies">
-        <p style="margin-top: 20px; margin-left: 20px;">By using this website, you automatically accept that we use cookies. Learn more about our <a href="#">privacy and cookies policy.</a></p>
+        <div id="img1" style="padding: 10px">
+          <img
+            class="close"
+            src="https://csite.nicepage.com/Images/Site/icon-close.png"
+            alt="logo"
+          />
+        </div>
+      </div>
+      <div id="nav">
+        <img
+          src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/d03cc6e5-2eb6-4776-9a93-7e74e581851e_150.png"
+        />
+        <div id="applogo">
+          <i class="fa-solid fa-bars"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-square-twitter"></i>
+          <i class="fa-brands fa-square-instagram"></i>
+        </div>
+      </div>
+      <div id="cookies">
+        <p style="margin-top: 20px; margin-left: 20px">
+          By using this website, you automatically accept that we use cookies.
+          Learn more about our <a href="#">privacy and cookies policy.</a>
+        </p>
         <button>Accept</button>
-    </div>
-    <div id="cookies2">
-        <img height="40px" width="40px" src="https://www.gstatic.com/recaptcha/api2/logo_48.png"/>
-        <p style="font-size: 8px;">Privacy . Terms</p>
-    </div>
-    <div id="main">
+      </div>
+      <div id="cookies2">
+        <img
+          height="40px"
+          width="40px"
+          src="https://www.gstatic.com/recaptcha/api2/logo_48.png"
+        />
+        <p style="font-size: 8px">Privacy . Terms</p>
+      </div>
+      <div id="main">
         <div id="main1">
-            <div id="main2">
-                <p style="font-size: 24px;">INTERIOR STUDIO</p><br>
-                <p style="font-size: 60px;">Home is not a</p>
-                <p style="font-size: 60px;">place it's a feeling</p><br>
-                <p style="font-size: 18px;">Image from </p>
-            </div>
+          <div id="main2">
+            <p style="font-size: 24px">INTERIOR STUDIO</p>
+            <br />
+            <p style="font-size: 60px">Home is not a</p>
+            <p style="font-size: 60px">place it's a feeling</p>
+            <br />
+            <p style="font-size: 18px">
+              Image from
+              <a style="text-decoration-color: #424242; color: #424242" href="#"
+                >Freepik</a
+              >
+            </p>
+          </div>
         </div>
+      </div>
+      <div id="interior">
+        <div id="interior1"></div>
+        <div id="interior2">
+          <div id="interior21">
+            <div id="interior211"></div>
+          </div>
+        </div>
+        <div id="interior3">
+          <h1 style="font-size: 48px">Interior Design and Space Planning</h1>
+          <p>
+            In dictum non consectetur a erat nam at. Turpis egestas<br /><br />
+            maecenas pharetra convallis posuere morbi. Scelerisque<br /><br />
+            purus semper eget duis. Dui id ornare arcu odio ut sem<br /><br />
+            nulla pharetra.
+          </p>
+          <p>Images from <a href="#">Freepik</a></p>
+        </div>
+        <div id="interior4">
+          <p>
+            Quis commodo odio aenean sed. Risus viverra adipiscing<br />at in
+            tellus integer feugiat scelerisque varius. Sit amet<br />aliquam id
+            diam. Eget dolor morbi non arcu risus quis<br />varius quam.
+            Fermentum posuere urna nec tincidunt <br />praesent semper feugiat
+            nibh sed. Urna id volutpat lacus<br />laoreet.
+          </p>
+          <div id="learnMore">LEARN MORE</div>
+        </div>
+      </div>
+      <div id="freshlooks">
+        <div id="freshlooksoutdiv">
+          <div id="number">
+            <h2 style="font-size: 60px">01</h2>
+          </div>
+          <h1>
+            We can envision a new fresh look for<br />
+            your apartment, house, office or <br />practice.
+          </h1>
+        </div>
+        <div id="images">
+          <img
+            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/5646.jpg"
+            alt="bed"
+          />
+          <img
+            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/pexels-cup-of-couple-6633450.jpg"
+            alt="chair"
+          />
+          <img
+            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/56456.jpg"
+            alt="pot"
+          />
+        </div>
+      </div>
+      <div id="Latestprojects">
+        <div id="LatestprojectText">
+          <h1 style="font-size: 48px">Latest Projects</h1>
+          <br />
+          <p style="font-size: 18px">
+            Phasellus scelerisque sed leo quis gravida. Fusce lobortis libero ut
+            arcu blandit pharetra.
+          </p>
+        </div>
+        <div id="wrapImages">
+          <div id="wrapimage1">
+            <div id="wrapimage11"></div>
+            <div id="wrapimage12"></div>
+          </div>
+          <div id="wrapimage2">
+            <div id="wrapimage21"></div>
+            <div id="wrapimage22"></div>
+          </div>
+        </div>
+      </div>
+      <div id="freshlooks">
+        <div id="freshlooksoutdiv2">
+          <h1 style="font-size: 48px">
+            We combine design classics, curated<br />
+            pieces from international furniture<br />
+            shows.
+          </h1>
+          <div id="number">
+            <h2 style="font-size: 60px">02</h2>
+          </div>
+        </div>
+        <div id="images">
+          <img
+            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/pexels-marina-podrez-12744083.jpg"
+            alt="decor"
+          />
+          <img
+            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/medium-shot-woman-holding-vase6.jpg"
+            alt="decor"
+          />
+          <img
+            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/64564.jpg"
+            alt="decor"
+          />
+        </div>
+      </div>
+      <div id="end">
+        <div id="child1">
+          <div id="child2">
+            <div id="child3"></div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
-360 650 470
