--- a/index.html
+++ b/index.html
@@ -81,40 +81,37 @@
         <p style="font-size: 8px">Privacy . Terms</p>
       </div>
       <div id="main">
-        <div id="main1">
-          <div id="main2">
-            <p style="font-size: 24px">INTERIOR STUDIO</p>
-            <br />
-            <p style="font-size: 60px">Home is not a</p>
-            <p style="font-size: 60px">place it's a feeling</p>
-            <br />
-            <p style="font-size: 18px">
-              Image from
-              <a style="text-decoration-color: #424242; color: #424242" href="#"
-                >Freepik</a
-              >
-            </p>
-          </div>
+        <div id="main1"></div>
+        <div id="main2"></div>
+        <div id="main3">
+          <p style="font-size: 24px">INTERIOR STUDIO</p>
+          <br />
+          <p style="font-size: 60px">Home is not a</p>
+          <p style="font-size: 60px">place it's a feeling</p>
+          <br />
+          <p style="font-size: 18px">
+            Image from
+            <a style="text-decoration-color: #424242; color: #424242" href="#"
+              >Freepik</a
+            >
+          </p>
         </div>
       </div>
       <div id="interior">
         <div id="interior1"></div>
-        <div id="interior2">
-          <div id="interior21">
-            <div id="interior211"></div>
-          </div>
-        </div>
-        <div id="interior3">
+        <div id="interior3"></div>
+        <div id="interior2"></div>
+        <div id="interior4">
           <h1 style="font-size: 48px">Interior Design and Space Planning</h1>
           <p>
-            In dictum non consectetur a erat nam at. Turpis egestas<br /><br />
-            maecenas pharetra convallis posuere morbi. Scelerisque<br /><br />
-            purus semper eget duis. Dui id ornare arcu odio ut sem<br /><br />
+            In dictum non consectetur a erat nam at. Turpis egestas<br />
+            maecenas pharetra convallis posuere morbi. Scelerisque<br />
+            purus semper eget duis. Dui id ornare arcu odio ut sem<br />
             nulla pharetra.
           </p>
           <p>Images from <a href="#">Freepik</a></p>
         </div>
-        <div id="interior4">
+        <div id="interior5">
           <p>
             Quis commodo odio aenean sed. Risus viverra adipiscing<br />at in
             tellus integer feugiat scelerisque varius. Sit amet<br />aliquam id
@@ -160,14 +157,10 @@
           </p>
         </div>
         <div id="wrapImages">
-          <div id="wrapimage1">
-            <div id="wrapimage11"></div>
-            <div id="wrapimage12"></div>
-          </div>
-          <div id="wrapimage2">
-            <div id="wrapimage21"></div>
-            <div id="wrapimage22"></div>
-          </div>
+          <div id="wrapimage1"></div>
+          <div id="wrapimage2"></div>
+          <div id="wrapimage3"></div>
+          <div id="wrapimage4"></div>
         </div>
       </div>
       <div id="freshlooks">
@@ -196,12 +189,67 @@
           />
         </div>
       </div>
-      <div id="end">
-        <div id="child1">
-          <div id="child2">
-            <div id="child3"></div>
+      <div id="contactpart">
+        <div class="contactpartone"></div>
+        <div class="contactparttwo"></div>
+        <div class="contactpartthree">
+          <div id="contactUs">
+            <h1 style="font-size: 46px; margin-bottom: 20px">Contact Us</h1>
+            <form>
+              <input type="text" placeholder="Enter your Name" /><br />
+              <input
+                type="url"
+                placeholder="Enter a valid email address"
+              /><br />
+              <input
+                style="height: 130px; padding: 30px 0px 100px 10px"
+                placeholder="Enter your message"
+              /><br /><br />
+              <button>SUBMIT</button>
+            </form>
           </div>
         </div>
+      </div>
+      <div id="contactparttext">
+        <p style="color: #424242; font-size: 18px">
+          Image from <a style="color: #424242" href="#">Freepik</a>
+        </p>
+      </div>
+      <div id="footer">
+        <div class="footer1">
+          <p>Copyright © 2018 All rights reserved.</p>
+          <p>This template is made with by</p>
+          <p id="page">Nicepage</p>
+          <br />
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+        </div>
+        <div class="footer2">
+          <p>Home</p>
+          <p>About</p>
+          <p>Blog</p>
+          <p>Portfolio</p>
+        </div>
+        <div class="footer2">
+          <p>Terms and Conditions</p>
+          <p>FAQ</p>
+          <p>Help Desk</p>
+          <p>Job Aplications</p>
+        </div>
+        <div class="footer2">
+          <p>Privacy</p>
+          <p>Contact Us</p>
+          <p>Newsletter</p>
+          <p>Clients Testimonials</p>
+        </div>
+      </div>
+      <div id="footerend">
+        <p>
+          <a href="#">HTML Templates </a>created with
+          <a href="#">WYSIWYG Web Builder.</a>
+        </p>
       </div>
     </div>
   </body>
