--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="parent">
       <div id="navbar">
-        <img src="https://csite.nicepage.com/Images/logo-w.png" alt="logo" />
+        <img style="cursor: pointer;" src="https://csite.nicepage.com/Images/logo-w.png" alt="logo" />
         <div id="device">
           <div id="img1" style="background-color: #c9e4f9">
             <img
@@ -91,7 +91,7 @@
           <br />
           <p style="font-size: 18px">
             Image from
-            <a style="text-decoration-color: #424242; color: #424242" href="#"
+            <a style="text-decoration-color: #424242; color: #424242" href="https://www.freepik.com/"
               >Freepik</a
             >
           </p>
@@ -119,7 +119,7 @@
             Fermentum posuere urna nec tincidunt <br />praesent semper feugiat
             nibh sed. Urna id volutpat lacus<br />laoreet.
           </p>
-          <div id="learnMore">LEARN MORE</div>
+          <div id="learnMore"><a style="text-decoration: none; font-size: 16px;" href="https://nicepage.com/k/asthetic-website-templates">LEARN MORE</a></div>
         </div>
       </div>
       <div id="freshlooks">
