--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <div id="navbar">
         <img style="cursor: pointer;" src="https://csite.nicepage.com/Images/logo-w.png" alt="logo" />
         <div id="device">
-          <div id="img1" style="background-color: #c9e4f9">
-            <img
+          <div id="img1" class="img11" style="background-color: #c9e4f9">
+            <img 
               src="https://csite.nicepage.com/Images/Site/responsive-desktop.png"
               alt="desktop"
             />
           </div>
-          <div id="img1">
+          <div id="img1" class="img12">
             <img
               src="https://csite.nicepage.com/Images/Site/responsive-laptop.png"
               alt="laptop"
@@ -58,6 +58,7 @@
         <img
           src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/d03cc6e5-2eb6-4776-9a93-7e74e581851e_150.png"
         />
+        <i id="bars" class="fa-solid fa-bars"></i>
         <div id="applogo">
           <i class="fa-solid fa-bars"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -68,7 +69,7 @@
       <div id="cookies">
         <p style="margin-top: 20px; margin-left: 20px">
           By using this website, you automatically accept that we use cookies.
-          Learn more about our <a href="#">privacy and cookies policy.</a>
+          Learn more about our <a href="https://nicepage.com/Privacy">privacy and cookies policy.</a>
         </p>
         <button>Accept</button>
       </div>
@@ -104,20 +105,20 @@
         <div id="interior4">
           <h1 style="font-size: 48px">Interior Design and Space Planning</h1>
           <p>
-            In dictum non consectetur a erat nam at. Turpis egestas<br />
-            maecenas pharetra convallis posuere morbi. Scelerisque<br />
-            purus semper eget duis. Dui id ornare arcu odio ut sem<br />
+            In dictum non consectetur a erat nam at. Turpis egestas
+            maecenas pharetra convallis posuere morbi. Scelerisque
+            purus semper eget duis. Dui id ornare arcu odio ut sem
             nulla pharetra.
           </p>
           <p>Images from <a href="#">Freepik</a></p>
         </div>
         <div id="interior5">
           <p>
-            Quis commodo odio aenean sed. Risus viverra adipiscing<br />at in
-            tellus integer feugiat scelerisque varius. Sit amet<br />aliquam id
-            diam. Eget dolor morbi non arcu risus quis<br />varius quam.
-            Fermentum posuere urna nec tincidunt <br />praesent semper feugiat
-            nibh sed. Urna id volutpat lacus<br />laoreet.
+            Quis commodo odio aenean sed. Risus viverra adipiscingat in
+            tellus integer feugiat scelerisque varius. Sit ametaliquam id
+            diam. Eget dolor morbi non arcu risus quisvarius quam.
+            Fermentum posuere urna nec tincidunt praesent semper feugiat
+            nibh sed. Urna id volutpat lacus laoreet.
           </p>
           <div id="learnMore"><a style="text-decoration: none; font-size: 16px;" href="https://nicepage.com/k/asthetic-website-templates">LEARN MORE</a></div>
         </div>
@@ -128,8 +129,8 @@
             <h2 style="font-size: 60px">01</h2>
           </div>
           <h1>
-            We can envision a new fresh look for<br />
-            your apartment, house, office or <br />practice.
+            We can envision a new fresh look for
+            your apartment, house, office or practice.
           </h1>
         </div>
         <div id="images">
@@ -166,8 +167,8 @@
       <div id="freshlooks">
         <div id="freshlooksoutdiv2">
           <h1 style="font-size: 48px">
-            We combine design classics, curated<br />
-            pieces from international furniture<br />
+            We combine design classics, curated
+            pieces from international furniture
             shows.
           </h1>
           <div id="number">
@@ -197,14 +198,8 @@
             <h1 style="font-size: 46px; margin-bottom: 20px">Contact Us</h1>
             <form>
               <input type="text" placeholder="Enter your Name" /><br />
-              <input
-                type="url"
-                placeholder="Enter a valid email address"
-              /><br />
-              <input
-                style="height: 130px; padding: 30px 0px 100px 10px"
-                placeholder="Enter your message"
-              /><br /><br />
+              <input type="url" placeholder="Enter a valid email address"/><br />
+              <input style="height: 130px; padding: 30px 0px 100px 10px" placeholder="Enter your message"/><br /><br />
               <button>SUBMIT</button>
             </form>
           </div>
