--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
   <body>
     <div id="parent">
       <div id="navbar">
-        <img style="cursor: pointer;" src="https://csite.nicepage.com/Images/logo-w.png" alt="logo" />
+        <img
+          style="cursor: pointer"
+          src="https://csite.nicepage.com/Images/logo-w.png"
+          alt="logo"
+        />
         <div id="device">
           <div id="img1" class="img11" style="background-color: #c9e4f9">
-            <img 
+            <img
               src="https://csite.nicepage.com/Images/Site/responsive-desktop.png"
               alt="desktop"
             />
@@ -27,19 +31,19 @@
               alt="laptop"
             />
           </div>
-          <div id="img1">
+          <div id="img1" class="img13">
             <img
               src="https://csite.nicepage.com/Images/Site/responsive-tablet.png"
               alt="tablet"
             />
           </div>
-          <div id="img1">
+          <div id="img1" class="img13">
             <img
               src="https://csite.nicepage.com/Images/Site/responsive-phone-horizontal.png"
               alt="phone"
             />
           </div>
-          <div id="img1">
+          <div id="img1" class="img13">
             <img
               src="https://csite.nicepage.com/Images/Site/responsive-phone.png"
               alt="phone"
@@ -69,7 +73,8 @@
       <div id="cookies">
         <p style="margin-top: 20px; margin-left: 20px">
           By using this website, you automatically accept that we use cookies.
-          Learn more about our <a href="https://nicepage.com/Privacy">privacy and cookies policy.</a>
+          Learn more about our
+          <a href="https://nicepage.com/Privacy">privacy and cookies policy.</a>
         </p>
         <button>Accept</button>
       </div>
@@ -87,12 +92,14 @@
         <div id="main3">
           <p style="font-size: 24px">INTERIOR STUDIO</p>
           <br />
-          <p style="font-size: 60px">Home is not a</p>
-          <p style="font-size: 60px">place it's a feeling</p>
+          <p class="maintext" >Home is not a</p>
+          <p class="maintext" >place it's a feeling</p>
           <br />
           <p style="font-size: 18px">
             Image from
-            <a style="text-decoration-color: #424242; color: #424242" href="https://www.freepik.com/"
+            <a
+              style="text-decoration-color: #424242; color: #424242"
+              href="https://www.freepik.com/"
               >Freepik</a
             >
           </p>
@@ -103,24 +110,29 @@
         <div id="interior3"></div>
         <div id="interior2"></div>
         <div id="interior4">
-          <h1 style="font-size: 48px">Interior Design and Space Planning</h1>
+          <h1>Interior Design and Space Planning</h1>
           <p>
-            In dictum non consectetur a erat nam at. Turpis egestas
-            maecenas pharetra convallis posuere morbi. Scelerisque
-            purus semper eget duis. Dui id ornare arcu odio ut sem
-            nulla pharetra.
+            In dictum non consectetur a erat nam at. Turpis egestas maecenas
+            pharetra convallis posuere morbi. Scelerisque purus semper eget
+            duis. Dui id ornare arcu odio ut sem nulla pharetra.
           </p>
           <p>Images from <a href="#">Freepik</a></p>
         </div>
         <div id="interior5">
           <p>
-            Quis commodo odio aenean sed. Risus viverra adipiscingat in
-            tellus integer feugiat scelerisque varius. Sit ametaliquam id
-            diam. Eget dolor morbi non arcu risus quisvarius quam.
-            Fermentum posuere urna nec tincidunt praesent semper feugiat
-            nibh sed. Urna id volutpat lacus laoreet.
+            Quis commodo odio aenean sed. Risus viverra adipiscingat in tellus
+            integer feugiat scelerisque varius. Sit ametaliquam id diam. Eget
+            dolor morbi non arcu risus quisvarius quam. Fermentum posuere urna
+            nec tincidunt praesent semper feugiat nibh sed. Urna id volutpat
+            lacus laoreet.
           </p>
-          <div id="learnMore"><a style="text-decoration: none; font-size: 16px;" href="https://nicepage.com/k/asthetic-website-templates">LEARN MORE</a></div>
+          <div id="learnMore">
+            <a
+              style="text-decoration: none; font-size: 16px"
+              href="https://nicepage.com/k/asthetic-website-templates"
+              >LEARN MORE</a
+            >
+          </div>
         </div>
       </div>
       <div id="freshlooks">
@@ -129,23 +141,14 @@
             <h2 style="font-size: 60px">01</h2>
           </div>
           <h1>
-            We can envision a new fresh look for
-            your apartment, house, office or practice.
+            We can envision a new fresh look for your apartment, house, office or
+            practice.
           </h1>
         </div>
         <div id="images">
-          <img
-            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/5646.jpg"
-            alt="bed"
-          />
-          <img
-            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/pexels-cup-of-couple-6633450.jpg"
-            alt="chair"
-          />
-          <img
-            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/56456.jpg"
-            alt="pot"
-          />
+          <div id="image1"></div>
+          <div id="image2"></div>
+          <div id="image3"></div>
         </div>
       </div>
       <div id="Latestprojects">
@@ -158,36 +161,36 @@
           </p>
         </div>
         <div id="wrapImages">
-          <div id="wrapimage1"></div>
-          <div id="wrapimage2"></div>
-          <div id="wrapimage3"></div>
-          <div id="wrapimage4"></div>
+          <div id="wrapImage1">
+            <div class="wrapImage11">
+              <div id="wrapimage1"></div>
+              <div id="wrapimage2"></div>
+            </div>
+            <div id="wrapimage3"></div>
+          </div>
+          <div id="wrapImage2">
+            <div id="wrapimage4"></div>
+            <div class="wrapImage21">
+              <div id="wrapimage5"></div>
+              <div id="wrapimage6"></div>
+            </div>
+          </div>
         </div>
       </div>
-      <div id="freshlooks">
+      <div id="freshlooks" style="margin-top: 30px">
         <div id="freshlooksoutdiv2">
-          <h1 style="font-size: 48px">
-            We combine design classics, curated
-            pieces from international furniture
-            shows.
+          <h1 style="margin-left: 0px; margin-right: 30px">
+            We combine design classics, curated pieces from international
+            furniture shows.
           </h1>
           <div id="number">
             <h2 style="font-size: 60px">02</h2>
           </div>
         </div>
         <div id="images">
-          <img
-            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/pexels-marina-podrez-12744083.jpg"
-            alt="decor"
-          />
-          <img
-            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/medium-shot-woman-holding-vase6.jpg"
-            alt="decor"
-          />
-          <img
-            src="https://assets.nicepagecdn.com/d2cc3eaa/16689/images/64564.jpg"
-            alt="decor"
-          />
+          <div id="image11"></div>
+          <div id="image12"></div>
+          <div id="image13"></div>
         </div>
       </div>
       <div id="contactpart">
@@ -198,8 +201,14 @@
             <h1 style="font-size: 46px; margin-bottom: 20px">Contact Us</h1>
             <form>
               <input type="text" placeholder="Enter your Name" /><br />
-              <input type="url" placeholder="Enter a valid email address"/><br />
-              <input style="height: 130px; padding: 30px 0px 100px 10px" placeholder="Enter your message"/><br /><br />
+              <input
+                type="url"
+                placeholder="Enter a valid email address"
+              /><br />
+              <input
+                style="height: 130px; padding: 30px 0px 100px 10px"
+                placeholder="Enter your message"
+              /><br /><br />
               <button>SUBMIT</button>
             </form>
           </div>
